--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,22 @@
 @import "tailwindcss";
 
+@theme {
+  --color-body: #030712;
+  --color-primary: #00C6BD;
+  --color-surface: #F2F2F2;
+}
+
+
+
+
 :root {
   font-family: Poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 14px;
   color-scheme: light dark;
-  /* color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
+  color: #F2F2F2;
+  background-color: #030712;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
