--- a/src/index.css
+++ b/src/index.css
@@ -28,25 +28,15 @@
     background: rgb(33, 40, 58);
   }
 
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 
-  /* Apply styles only to the sidebar */
-  @media (max-width: 768px) {
-    .sidebar-scrollbar::-webkit-scrollbar {
-      width: 4px;
-    }
-
-    .sidebar-scrollbar::-webkit-scrollbar-track {
-      background: #1A1F2E;
-    }
-
-    .sidebar-scrollbar::-webkit-scrollbar-thumb {
-      background: #2c344d;
-      border-radius: 50px;
-    }
-
-    .sidebar-scrollbar::-webkit-scrollbar-thumb:hover {
-      background: #384261;
-    }
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    /* Hide scrollbar in IE/Edge */
+    scrollbar-width: none;
+    /* Hide scrollbar in Firefox */
   }
 
   .icon-button {
